governance-shared/baselines/3.8.0/ChronoPM-Project/assets/templates/project-context-template.md
---
doc_type: project-context
project: ""
version: v1.0
date: "{{date}}"
status: 草稿
---

# 项目背景

## 合同信息

| 项目 | 内容 |
|------|------|
| 合同名称 | |
| 合同总额 | XX万元 |
| 合同类型 | 固定总价含税合同 / 其他 |
| 合同范围摘要 | 一段话概括合同覆盖的业务范围 |
| 立项时间 | YYYY-MM-DD |
| 启动时间 | YYYY-MM-DD |
| 计划完工时间 | YYYY-MM-DD |
| 测算周期 | 如：12个月开发 + 12个月质保 |

## 项目基本信息

| 项目 | 内容 |
|------|------|
| 项目名称 | |
| 承建单位 | |
| 项目经理 | [姓名]（[联系电话]） |
| 当前阶段 | 如：系统开发、需求规划、测试推进等 |

## 兄弟项目

> 联邦拆分后维护。纯单项目本段留空。Step 0.5 结转提示读此段给出 ai 路径。

| 项目名 | ai 路径指针 | 状态 |
|--------|-------------|------|
| | | |

## 成本核算方式

> 人工计量单位、默认能耗规则必填；成本单价选填。单位由项目约定，模板与规则禁止写死具体单位。

| 字段 | 必填 | 值 |
|------|------|-----|
| 人工计量单位 | 是 | [由项目约定] |
| 默认能耗规则 | 是 | [无投喂日如何计，如：有日报产出=1 单位 / 不计 / 其他] |
| 成本单价 | 否 | [可留空] |

## 外部填报映射（可选）

> 首次按表投喂确认列义后填写。列名由项目约定，禁止把任何公司列名写进规则或模板默认值。人员/时间/量/任务列均可空；无此需求整段可省略。

| 用途 | 列名 | 示例 | 备注 |
|------|------|------|------|
| 人员列 |  |  | 可空 |
| 时间列 |  |  | 可空 |
| 量列 |  |  | 可空 |
| 任务列 |  |  | 可空 |

## 项目目标

（描述项目要达成的目标）

## 项目范围

### 子项目/模块

| 序号 | 子项目 | 合同金额 | 50%成本线 | 项目范围 |
|------|--------|----------|-----------|----------|
| 1 | [如：全链通重构] | XX万 | XX万 | ①前端页面重构 ②接口改造 |
| 2 | [如：登记注册] | XX万 | XX万 | ①开办主体补全 ②变更业务 ③注销业务 |
| 3 | [如：信用监管合并] | XX万 | XX万 | ①用户体系合并 ②权限合并 ③页面合并 |

### 排除范围

- 

## 里程碑计划

| 里程碑 | 计划日期 | 核心交付物 | 通过标准 |
|--------|----------|------------|----------|
| M01 | | 项目章程 | |
| M02 | | 需求基线 | |
| ... | | | |

## 环境信息

| 环境类型 | 访问地址 | 账号/密码 | 说明 |
|----------|----------|-----------|------|
| 原测试环境 | | | |
| 信创测试环境 | | | |
| 开发环境 | | | |
| 数据库 | | | |
| 容器管理(Rancher) | | | |
| 配置中心(nacos) | | | |
| CI/CD(jenkins) | | | |

> 安全提示：实际密码不在此文档记录，仅记录访问路径和账号名。

## 关键资源链接

| 资源 | 链接 | 说明 |
|------|------|------|
| 原型图 | | 按模块列出 |
| 设计图 | | |
| 接口文档 | | |
| 代码仓库 | | |
| 项目文件备份 | | SFTP地址 |

## 关键干系人

| 姓名 | 角色 | 关注点 |
|------|------|--------|
| | | |

## 关键约束

- 技术约束：
- 合规约束：
- 资源约束：

## 兄弟项目

> 联邦挂载下同集其他项目的指针（项目名 / ai 路径指针 / 状态）。纯单项目留空。

| 项目名 | ai 路径指针 | 状态 |
|--------|-------------|------|
| | | |

## 备注

## 项目级推导规则（v3.7.0）

> 通用推导骨架见 `00-pm-main-rules.md` §10。实体枚举与阶段状态以 WP §3b 为唯一载体，无独立 entity-registry。
> 模块划分见上方「子项目/模块」表。

### 推导链覆盖

> 覆盖/扩展 `00` §10.3 默认链。未列出的按默认执行。

| 推导触发事件 | 推导结论 | 说明 |
|---|---|---|
| （按需；如「预演通过」） | | |

### 终态事件扩展

- （按需增加，扩展 `00` §10.2）

